--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -83,7 +83,7 @@ services:
 
   redis:
     image: redis:4.0
-    container_name: app_redis
+    container_name: project_name_redis
     ports:
       - "6382:6379"
     networks:
